Fix forcing data copy statement and rerun notebook

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00534415",
+   "id": "445bcbc0",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "315fe0d6",
+   "id": "59bf99be",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bafa2b07",
+   "id": "f14a0d48",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee762746",
+   "id": "45888b21",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a088e5c",
+   "id": "728b8de1",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be5b5b32",
+   "id": "d204fc95",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     {
      "data": {
       "text/plain": [
-       "'2020.1.1'"
+       "('2020.1.1',)"
       ]
      },
      "execution_count": 1,
@@ -104,17 +104,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e0a0713",
+   "id": "fd86b376",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ewatercycle.CFG['container_engine'] = \"singularity\""
+    "ewatercycle.CFG['container_engine'] = \"docker\"\n",
+    "ewatercycle.CFG['output_dir'] = \"./\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "21cd26f3",
+   "id": "a3111da4",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6ed8a617",
+   "id": "081309cd",
    "metadata": {},
    "outputs": [
     {
@@ -149,12 +150,12 @@
      "text": [
       "Forcing data for Wflow\n",
       "----------------------\n",
-      "Directory: ../\n",
+      "Directory: ./wflow_example_case_nc\n",
       "Start time: 1991-01-01T00:00:00Z\n",
       "End time: 1991-12-31T00:00:00Z\n",
       "Shapefile: None\n",
       "Additional information for model config:\n",
-      "  - netcdfinput: ../test_forcing_data.nc\n",
+      "  - netcdfinput: inmaps.nc\n",
       "  - Precipitation: /P\n",
       "  - Temperature: /TEMP\n",
       "  - EvapoTranspiration: /PET\n",
@@ -166,13 +167,13 @@
     "# Load forcing data from an external source\n",
     "import ewatercycle.forcing\n",
     "forcing = ewatercycle.forcing.load_foreign(\n",
-    "    directory = \"../\",\n",
+    "    directory = \"./wflow_example_case_nc\",\n",
     "    target_model = 'wflow',\n",
     "    start_time = '1991-01-01T00:00:00Z',\n",
     "    end_time = '1991-12-31T00:00:00Z',\n",
     "    forcing_info = dict(\n",
     "        # Additional information about the external forcing data needed for the model configuration\n",
-    "        netcdfinput = '../test_forcing_data.nc',\n",
+    "        netcdfinput = \"inmaps.nc\",\n",
     "        Precipitation = \"/P\",\n",
     "        EvapoTranspiration = \"/PET\",\n",
     "        Temperature = \"/TEMP\"\n",
@@ -184,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cf4964e9",
+   "id": "1a321c6b",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3c60446f",
+   "id": "00c7a657",
    "metadata": {
     "tags": []
    },
@@ -216,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running docker://ewatercycle/wflow-grpc4bmi:2020.1.1 singularity container on port 33661\n"
+      "Running docker://ewatercycle/wflow-grpc4bmi:2020.1.1 singularity container on port 47585\n"
      ]
     }
    ],
@@ -228,15 +229,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08abb219",
+   "id": "f1c78f7c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210611_115915/wflow_ewatercycle.ini\n",
-      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210611_115915\n"
+      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210614_114036/wflow_ewatercycle.ini\n",
+      "/home/peter/ewatercycle/ewatercycle/examples/wflow_20210614_114036\n"
      ]
     }
    ],
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45892a19",
+   "id": "17ba246e",
    "metadata": {},
    "source": [
     "#### Update the config file\n",
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87070a80",
+   "id": "d42a823b",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -274,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6146d93e",
+   "id": "38e516e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5094b1b8",
+   "id": "61b07b8b",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "afc49fc7",
+   "id": "8aac3b30",
    "metadata": {
     "tags": []
    },
@@ -679,13 +680,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1990-12-31 00:00:00\n",
        "Attributes:\n",
-       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-b756dcdd-31e2-423d-8c98-2b3f3c1048a7' class='xr-array-in' type='checkbox' checked><label for='section-b756dcdd-31e2-423d-8c98-2b3f3c1048a7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-21a08259-df77-4716-b1f9-f288899acf21' class='xr-array-in' type='checkbox' checked><label for='section-21a08259-df77-4716-b1f9-f288899acf21' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-e372fc54-ba92-45f3-9c82-a2051633a85c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e372fc54-ba92-45f3-9c82-a2051633a85c' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-153db7ce-80b4-40b6-89e3-abbd8aa4ce9f' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-153db7ce-80b4-40b6-89e3-abbd8aa4ce9f' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b57e4c65-111f-48b3-8c83-6cf7984933c3' class='xr-var-data-in' type='checkbox'><label for='data-b57e4c65-111f-48b3-8c83-6cf7984933c3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-3b3af7b2-6ab7-4ea9-9d04-a21ba4e86c5a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3b3af7b2-6ab7-4ea9-9d04-a21ba4e86c5a' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-529b46a8-9abd-4595-8c5c-7afe4eb2130e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-529b46a8-9abd-4595-8c5c-7afe4eb2130e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d6c59d3f-958b-4d8d-9bf1-68c157d05f83' class='xr-var-data-in' type='checkbox'><label for='data-d6c59d3f-958b-4d8d-9bf1-68c157d05f83' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -716,7 +717,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-a0887cf6-6728-4e33-b4df-8caac9e53424' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a0887cf6-6728-4e33-b4df-8caac9e53424' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7d32638c-df60-4cac-808c-5a1fc612f8b2' class='xr-var-data-in' type='checkbox'><label for='data-7d32638c-df60-4cac-808c-5a1fc612f8b2' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-3e9f7442-97ec-42d7-ba09-bfaeb7951b6c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3e9f7442-97ec-42d7-ba09-bfaeb7951b6c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5c4551bb-7a22-4410-8051-7a09877f994a' class='xr-var-data-in' type='checkbox'><label for='data-5c4551bb-7a22-4410-8051-7a09877f994a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -744,7 +745,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-12-31 00:00:00</div><input id='attrs-87411cd6-850a-46cc-bd37-df3bd2e125a6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-87411cd6-850a-46cc-bd37-df3bd2e125a6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-8cafd049-8042-45a6-8842-7ca770101e25' class='xr-var-data-in' type='checkbox'><label for='data-8cafd049-8042-45a6-8842-7ca770101e25' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d35f6a4f-77c6-4004-a4cd-228474e67aac' class='xr-section-summary-in' type='checkbox'  checked><label for='section-d35f6a4f-77c6-4004-a4cd-228474e67aac' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-12-31 00:00:00</div><input id='attrs-2dca2dec-e23a-4874-ad0e-19b38ae90ded' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-2dca2dec-e23a-4874-ad0e-19b38ae90ded' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a2f815e3-96cd-4367-9a0e-4dcb7213c2d1' class='xr-var-data-in' type='checkbox'><label for='data-a2f815e3-96cd-4367-9a0e-4dcb7213c2d1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-ee720edf-0569-41b3-bdc2-ce2b5cc2adb4' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ee720edf-0569-41b3-bdc2-ce2b5cc2adb4' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -776,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "17b8f452",
+   "id": "2487e640",
    "metadata": {},
    "outputs": [
     {
@@ -855,13 +856,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b21adc44",
+   "id": "32f9ed0f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f07157986d0>"
+       "<matplotlib.collections.QuadMesh at 0x7f6ffe937970>"
       ]
      },
      "execution_count": 12,
@@ -890,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3668e89f",
+   "id": "aafce78a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "396c4a95",
+   "id": "df8e07d3",
    "metadata": {},
    "outputs": [],
    "source": []
