--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "29c0c279",
+   "id": "d2ab91e3",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c23f29f5",
+   "id": "66136335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f8dc3d0",
+   "id": "2da966d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bdfac64",
+   "id": "bf5021f9",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "10f0e2f3",
+   "id": "34c294cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cfc46fa9",
+   "id": "21b0fe92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb8687cb",
+   "id": "99891d3f",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "701c214c",
+   "id": "3deb6be7",
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +136,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f00edbdd",
+   "id": "93cab12d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.lisflood.Lisflood at 0x2b07d25893d0>"
+       "<ewatercycle.models.lisflood.Lisflood at 0x2ab1cb2e35e0>"
       ]
      },
      "execution_count": 7,
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "44035540",
+   "id": "f2d73118",
    "metadata": {},
    "outputs": [
     {
@@ -189,14 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d2f6b48a",
+   "id": "26a7cd87",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 48831\n"
+      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 57382\n"
      ]
     }
    ],
@@ -208,15 +208,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "32cc5e24",
+   "id": "d4df348f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210611_152348/lisflood_setting.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210611_152348\n"
+      "/scratch/shared/ewatercycle/lisflood_20210615_181328/lisflood_setting.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210615_181328\n"
      ]
     },
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "39d9abcd",
+   "id": "26323584",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0703b323",
+   "id": "3e3e69f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9b8f90c2",
+   "id": "aa1d0a21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "61ebe22d",
+   "id": "ef33b4b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cce90810",
+   "id": "5e35b5c5",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "96cd8994",
+   "id": "138bd3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e54a8b89",
+   "id": "f0979553",
    "metadata": {},
    "outputs": [
     {
@@ -701,13 +701,13 @@
        "  * latitude   (latitude) float64 89.95 89.85 89.75 ... -59.75 -59.85 -59.95\n",
        "    time       object 1990-01-03 00:00:00\n",
        "Attributes:\n",
-       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-d84af2cc-e105-44f3-a063-e2dd2ef303a8' class='xr-array-in' type='checkbox' checked><label for='section-d84af2cc-e105-44f3-a063-e2dd2ef303a8' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a6f34bf8-9ceb-4f1d-b014-ee60e7d0256a' class='xr-array-in' type='checkbox' checked><label for='section-a6f34bf8-9ceb-4f1d-b014-ee60e7d0256a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-263d232f-80cf-41d8-9c85-7d421fdd5f62' class='xr-section-summary-in' type='checkbox'  checked><label for='section-263d232f-80cf-41d8-9c85-7d421fdd5f62' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-b23fed85-9e50-487b-84f4-9928545f9d70' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b23fed85-9e50-487b-84f4-9928545f9d70' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b55c0c31-539b-4670-a794-82cf9c4b9542' class='xr-var-data-in' type='checkbox'><label for='data-b55c0c31-539b-4670-a794-82cf9c4b9542' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-5e1e8e67-7a58-4332-8f54-44820b5a32a3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5e1e8e67-7a58-4332-8f54-44820b5a32a3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-87f505ff-fe98-4c4d-8586-e1d32d8916a0' class='xr-var-data-in' type='checkbox'><label for='data-87f505ff-fe98-4c4d-8586-e1d32d8916a0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-7a372283-d1a8-4999-9c1a-1c53d25df150' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7a372283-d1a8-4999-9c1a-1c53d25df150' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-63088dfd-6987-4ccd-9756-a89225ee62f6' class='xr-var-data-in' type='checkbox'><label for='data-63088dfd-6987-4ccd-9756-a89225ee62f6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-cb2cd084-20f8-4b0b-b644-2bd20a459d46' class='xr-section-summary-in' type='checkbox'  checked><label for='section-cb2cd084-20f8-4b0b-b644-2bd20a459d46' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-65b9fe1b-ec1b-4685-a1c6-1e9ca37cc4e3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-65b9fe1b-ec1b-4685-a1c6-1e9ca37cc4e3' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-86c3ffa0-6e61-4ef1-ab69-0f8848b17e74' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-86c3ffa0-6e61-4ef1-ab69-0f8848b17e74' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2fa24237-d147-4c46-840e-d250f47b1b02' class='xr-var-data-in' type='checkbox'><label for='data-2fa24237-d147-4c46-840e-d250f47b1b02' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-bf9f1c8c-10bc-47da-af15-f6015eab2cc1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bf9f1c8c-10bc-47da-af15-f6015eab2cc1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-64add7b1-aa3e-4488-babe-0a04cf6ba3b6' class='xr-var-data-in' type='checkbox'><label for='data-64add7b1-aa3e-4488-babe-0a04cf6ba3b6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-225e805d-ffb7-466a-953a-f843a0f20ce5' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-225e805d-ffb7-466a-953a-f843a0f20ce5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3144accc-30f6-4aef-a0b3-19bad4a1e614' class='xr-var-data-in' type='checkbox'><label for='data-3144accc-30f6-4aef-a0b3-19bad4a1e614' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-1df7e48b-0b38-4c4a-9d90-3b3f83e47c76' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1df7e48b-0b38-4c4a-9d90-3b3f83e47c76' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'Discharge' (latitude: 1500, longitude: 3600)>\n",
@@ -738,13 +738,13 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "44cc1878",
+   "id": "80f512d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2b07d3a95e50>"
+       "<matplotlib.collections.QuadMesh at 0x2ab1e07d4790>"
       ]
      },
      "execution_count": 18,
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c0a01307",
+   "id": "bba2de03",
    "metadata": {},
    "outputs": [
     {
@@ -790,13 +790,13 @@
    ],
    "source": [
     "# get value at a single index\n",
-    "model.get_value_at_indices('Discharge', np.array([1703886]))"
+    "model.get_value_at_indices('Discharge', [1703886])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6823e0d7",
+   "id": "3572d662",
    "metadata": {},
    "outputs": [
     {
@@ -812,86 +812,109 @@
    ],
    "source": [
     "# get values at multiple indices\n",
-    "model.get_value_at_indices('Discharge', np.array([1703886, 1413056]))"
+    "model.get_value_at_indices('Discharge', [1703886, 1413056])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "2e175d3a",
+   "execution_count": 21,
+   "id": "6f204fc7",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your coordinates [[-71.35  42.65]] match these model coordinates [array([-71.35,  42.65])].\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([9.10970681])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# get value at coordinates\n",
-    "discharge_at_coords = model.get_value_at_coords('Discharge', lat=np.array([42.65]), lon=np.array([-71.35]))\n",
+    "discharge_at_coords = model.get_value_at_coords('Discharge', lon=[-71.35], lat=[42.65])\n",
     "discharge_at_coords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "39a334ef",
+   "execution_count": 22,
+   "id": "a4d23415",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-71.35]), array([42.65]))"
+       "(array([-71.35,   5.65]), array([42.65, 50.75]))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# indices to coords\n",
-    "model.indices_to_coords('Discharge', np.array([1703886]))"
+    "model.indices_to_coords('Discharge', [1703886, 1413056])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "fc267ee7",
+   "execution_count": 23,
+   "id": "cd848cbf",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your coordinates [[-71.35  42.65]\n",
+      " [  5.6   50.7 ]] match these model coordinates [array([-71.35,  42.65]), array([ 5.65, 50.65])].\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([1703886])"
+       "array([1703886, 1416656])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# coords to indices\n",
-    "model.coords_to_indices('Discharge',  lat=np.array([42.65]), lon=np.array([-71.35]))"
+    "model.coords_to_indices('Discharge',  lon=[-71.35, 5.6], lat=[42.65, 50.7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "cd557214",
+   "execution_count": 24,
+   "id": "598cb904",
    "metadata": {},
    "outputs": [],
    "source": [
     "# stop the model\n",
     "del model.bmi"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "066d8eed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
