--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d2ab91e3",
+   "id": "8ad24cbe",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "66136335",
+   "id": "2e1304eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da966d5",
+   "id": "78d8a9d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5021f9",
+   "id": "fafe549f",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "34c294cf",
+   "id": "4c871063",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "21b0fe92",
+   "id": "11aafcbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "99891d3f",
+   "id": "d2686cb2",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3deb6be7",
+   "id": "ec981ac5",
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +136,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "93cab12d",
+   "id": "1067b40f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.lisflood.Lisflood at 0x2ab1cb2e35e0>"
+       "<ewatercycle.models.lisflood.Lisflood at 0x2abdf3b77220>"
       ]
      },
      "execution_count": 7,
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f2d73118",
+   "id": "29ab8953",
    "metadata": {},
    "outputs": [
     {
@@ -189,14 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "26a7cd87",
+   "id": "0526226d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 57382\n"
+      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 45819\n"
      ]
     }
    ],
@@ -208,15 +208,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d4df348f",
+   "id": "72b9d383",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210615_181328/lisflood_setting.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210615_181328\n"
+      "/scratch/shared/ewatercycle/lisflood_20210618_115651/lisflood_setting.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210618_115651\n"
      ]
     },
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "26323584",
+   "id": "1a39c125",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3e3e69f8",
+   "id": "11284019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aa1d0a21",
+   "id": "caebef64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ef33b4b9",
+   "id": "d71fad2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5e35b5c5",
+   "id": "d70caf6f",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "138bd3c0",
+   "id": "bee75662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f0979553",
+   "id": "f350c0b7",
    "metadata": {},
    "outputs": [
     {
@@ -701,13 +701,13 @@
        "  * latitude   (latitude) float64 89.95 89.85 89.75 ... -59.75 -59.85 -59.95\n",
        "    time       object 1990-01-03 00:00:00\n",
        "Attributes:\n",
-       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a6f34bf8-9ceb-4f1d-b014-ee60e7d0256a' class='xr-array-in' type='checkbox' checked><label for='section-a6f34bf8-9ceb-4f1d-b014-ee60e7d0256a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-3d4476f3-9fc9-406f-8a5d-652ef129e9ae' class='xr-array-in' type='checkbox' checked><label for='section-3d4476f3-9fc9-406f-8a5d-652ef129e9ae' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-65b9fe1b-ec1b-4685-a1c6-1e9ca37cc4e3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-65b9fe1b-ec1b-4685-a1c6-1e9ca37cc4e3' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-86c3ffa0-6e61-4ef1-ab69-0f8848b17e74' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-86c3ffa0-6e61-4ef1-ab69-0f8848b17e74' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2fa24237-d147-4c46-840e-d250f47b1b02' class='xr-var-data-in' type='checkbox'><label for='data-2fa24237-d147-4c46-840e-d250f47b1b02' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-bf9f1c8c-10bc-47da-af15-f6015eab2cc1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bf9f1c8c-10bc-47da-af15-f6015eab2cc1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-64add7b1-aa3e-4488-babe-0a04cf6ba3b6' class='xr-var-data-in' type='checkbox'><label for='data-64add7b1-aa3e-4488-babe-0a04cf6ba3b6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-225e805d-ffb7-466a-953a-f843a0f20ce5' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-225e805d-ffb7-466a-953a-f843a0f20ce5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3144accc-30f6-4aef-a0b3-19bad4a1e614' class='xr-var-data-in' type='checkbox'><label for='data-3144accc-30f6-4aef-a0b3-19bad4a1e614' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-1df7e48b-0b38-4c4a-9d90-3b3f83e47c76' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1df7e48b-0b38-4c4a-9d90-3b3f83e47c76' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-aeed1461-f898-42f2-95c9-0ffe785db7e6' class='xr-section-summary-in' type='checkbox'  checked><label for='section-aeed1461-f898-42f2-95c9-0ffe785db7e6' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-6a5475ba-a27e-4b1e-8557-dacddb11427c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6a5475ba-a27e-4b1e-8557-dacddb11427c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d0ea40da-54ed-4b8c-9c48-fdd93777623c' class='xr-var-data-in' type='checkbox'><label for='data-d0ea40da-54ed-4b8c-9c48-fdd93777623c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-38d71132-8663-4510-bf34-ab416c23e85c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-38d71132-8663-4510-bf34-ab416c23e85c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e85f7882-9793-4f80-b415-fdcf5c34f916' class='xr-var-data-in' type='checkbox'><label for='data-e85f7882-9793-4f80-b415-fdcf5c34f916' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-438430c5-2e69-473a-9dd9-6e20ec62abfd' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-438430c5-2e69-473a-9dd9-6e20ec62abfd' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1497d998-faa6-4c4b-8ab3-dd31b7908487' class='xr-var-data-in' type='checkbox'><label for='data-1497d998-faa6-4c4b-8ab3-dd31b7908487' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c0acc963-817d-47c4-acfa-6d4dbc973d19' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c0acc963-817d-47c4-acfa-6d4dbc973d19' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'Discharge' (latitude: 1500, longitude: 3600)>\n",
@@ -738,13 +738,13 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "80f512d3",
+   "id": "8324693d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2ab1e07d4790>"
+       "<matplotlib.collections.QuadMesh at 0x2abdf5087760>"
       ]
      },
      "execution_count": 18,
@@ -774,9 +774,16 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bba2de03",
+   "id": "6e8cc5fb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your coordinates [(-71.35, 42.64)] match these model coordinates [(-71.35, 42.65)].\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -789,66 +796,14 @@
     }
    ],
    "source": [
-    "# get value at a single index\n",
-    "model.get_value_at_indices('Discharge', [1703886])"
+    "# get value at coordinates\n",
+    "model.get_value_at_coords('Discharge', lon=[-71.35], lat=[42.64])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3572d662",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 9.10970681, 81.58106518])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get values at multiple indices\n",
-    "model.get_value_at_indices('Discharge', [1703886, 1413056])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "6f204fc7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your coordinates [[-71.35  42.65]] match these model coordinates [array([-71.35,  42.65])].\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([9.10970681])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get value at coordinates\n",
-    "discharge_at_coords = model.get_value_at_coords('Discharge', lon=[-71.35], lat=[42.65])\n",
-    "discharge_at_coords"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a4d23415",
+   "id": "2c2b5063",
    "metadata": {},
    "outputs": [
     {
@@ -857,28 +812,27 @@
        "(array([-71.35,   5.65]), array([42.65, 50.75]))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# indices to coords\n",
-    "model.indices_to_coords('Discharge', [1703886, 1413056])"
+    "model._indices_to_coords('Discharge', [1703886, 1413056])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "cd848cbf",
+   "execution_count": 21,
+   "id": "8b0b973d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your coordinates [[-71.35  42.65]\n",
-      " [  5.6   50.7 ]] match these model coordinates [array([-71.35,  42.65]), array([ 5.65, 50.65])].\n"
+      "Your coordinates [(-71.35, 42.65), (5.6, 50.7)] match these model coordinates [(-71.35, 42.65), (5.65, 50.65)].\n"
      ]
     },
     {
@@ -887,20 +841,20 @@
        "array([1703886, 1416656])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# coords to indices\n",
-    "model.coords_to_indices('Discharge',  lon=[-71.35, 5.6], lat=[42.65, 50.7])"
+    "model._coords_to_indices('Discharge',  lon=[-71.35, 5.6], lat=[42.65, 50.7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "598cb904",
+   "execution_count": 22,
+   "id": "9552268e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "066d8eed",
+   "id": "971aa1cd",
    "metadata": {},
    "outputs": [],
    "source": []
