Replace SubVersionCopier with get_parameter_set()

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -34,7 +34,9 @@
     "from ewatercycle import CFG\n",
     "import ewatercycle.models\n",
     "from ewatercycle.forcing import load_foreign\n",
-    "from ewatercycle.models.lisflood import LisfloodParameterSet"
+    "from ewatercycle.models.lisflood import LisfloodParameterSet\n",
+    "from ewatercycle.parameter_sets import download_example_parameter_sets\n",
+    "from ewatercycle.parameter_sets import get_parameter_set"
    ]
   },
   {
@@ -851,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
