Remove unused imports
They should be part fix for #124

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -34,9 +34,7 @@
     "from ewatercycle import CFG\n",
     "import ewatercycle.models\n",
     "from ewatercycle.forcing import load_foreign\n",
-    "from ewatercycle.models.lisflood import LisfloodParameterSet\n",
-    "from ewatercycle.parameter_sets import download_example_parameter_sets\n",
-    "from ewatercycle.parameter_sets import get_parameter_set"
+    "from ewatercycle.models.lisflood import LisfloodParameterSet"
    ]
   },
   {
