Use Lisflood.setup{MaskMap) in notebook

--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -34,7 +34,7 @@
     "from ewatercycle import CFG\n",
     "import ewatercycle.models\n",
     "from ewatercycle.forcing import load_foreign\n",
-    "from ewatercycle.models.lisflood import LisfloodParameterSet"
+    "from ewatercycle.parameter_sets import ParameterSet\n"
    ]
   },
   {
@@ -70,11 +70,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameterset = LisfloodParameterSet(\n",
-    "    PathRoot='/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked',\n",
-    "    MaskMap='/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc',\n",
-    "    config_template='/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml',\n",
-    ")"
+    "parameterset = ParameterSet(\n",
+    "    name='Lisflood01degree_masked',\n",
+    "    directory='/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked',\n",
+    "    config='/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml',\n",
+    "    supported_model_versions={'20.10'},\n",
+    "    target_model='lisflood'\n",
+    ")\n",
+    "mask_map = '/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc'"
    ]
   },
   {
@@ -202,7 +205,9 @@
    ],
    "source": [
     "# setup model\n",
-    "config_file, config_dir = model.setup(IrrigationEfficiency='0.8', end_time='1990-10-10T00:00:00Z')"
+    "config_file, config_dir = model.setup(IrrigationEfficiency='0.8', \n",
+    "                                      end_time='1990-10-10T00:00:00Z'\n",
+    "                                      MaskMap=mask_map)"
    ]
   },
   {
