Raise exceptions in available_parameter_sets and return tuple

--- a/docs/examples/system_setup.ipynb
+++ b/docs/examples/system_setup.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/ewatercycle.yaml')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,12 +136,24 @@
       "grdc_location: None\n",
       "output_dir: None\n",
       "parameter_sets:\n",
-      "  lisflood_fraser: {config: lisflood_fraser/settings_lat_lon-Run.xml, directory: lisflood_fraser,\n",
-      "    doi: N/A, target_model: lisflood}\n",
-      "  pcrglobwb_example_case: {config: pcrglobwb_example_case/setup_natural_test.ini,\n",
-      "    directory: pcrglobwb_example_case, doi: N/A, target_model: pcrglobwb}\n",
-      "  wflow_rhine_sbm_nc: {config: wflow_rhine_sbm_nc/wflow_sbm_NC.ini, directory: wflow_rhine_sbm_nc,\n",
-      "    doi: N/A, target_model: wflow}\n",
+      "  lisflood_fraser:\n",
+      "    config: lisflood_fraser/settings_lat_lon-Run.xml\n",
+      "    directory: lisflood_fraser\n",
+      "    doi: N/A\n",
+      "    supported_model_versions: !!set {'20.10': null}\n",
+      "    target_model: lisflood\n",
+      "  pcrglobwb_example_case:\n",
+      "    config: pcrglobwb_example_case/setup_natural_test.ini\n",
+      "    directory: pcrglobwb_example_case\n",
+      "    doi: N/A\n",
+      "    supported_model_versions: !!set {setters: null}\n",
+      "    target_model: pcrglobwb\n",
+      "  wflow_rhine_sbm_nc:\n",
+      "    config: wflow_rhine_sbm_nc/wflow_sbm_NC.ini\n",
+      "    directory: wflow_rhine_sbm_nc\n",
+      "    doi: N/A\n",
+      "    supported_model_versions: !!set {2020.1.1: null}\n",
+      "    target_model: wflow\n",
       "parameterset_dir: /home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets\n",
       "singularity_dir: None\n"
      ]
@@ -153,36 +165,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['wflow_rhine_sbm_nc', 'pcrglobwb_example_case', 'lisflood_fraser']"
+       "('wflow_rhine_sbm_nc', 'pcrglobwb_example_case', 'lisflood_fraser')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(available_parameter_sets())"
+    "available_parameter_sets()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ParameterSet(name='pcrglobwb_example_case', directory=PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case'), config=PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case/setup_natural_test.ini'), doi='N/A', target_model='pcrglobwb')"
+       "ParameterSet(name='pcrglobwb_example_case', directory=PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case'), config=PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case/setup_natural_test.ini'), doi='N/A', target_model='pcrglobwb', supported_model_versions={'setters'})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
