Replace id with name

--- a/docs/examples/ewatercycle_api_notebook.ipynb
+++ b/docs/examples/ewatercycle_api_notebook.ipynb
@@ -324,7 +324,7 @@
     "parameter_set.doi\n",
     "# 'https://doi.org/10.1000/182'\n",
     "\n",
-    "parameter_set.id\n",
+    "parameter_set.name\n",
     "# 'wflow-30-min-global'\n",
     "\n",
     "parameter_set.supported_model_versions\n",
