--- a/docs/examples/ewatercycle_api_notebook.ipynb
+++ b/docs/examples/ewatercycle_api_notebook.ipynb
@@ -324,7 +324,7 @@
     "parameter_set.doi\n",
     "# 'https://doi.org/10.1000/182'\n",
     "\n",
-    "parameter_set.id\n",
+    "parameter_set.name\n",
     "# 'wflow-30-min-global'\n",
     "\n",
     "parameter_set.supported_model_versions\n",
@@ -576,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
